--- a/css/master.css
+++ b/css/master.css
@@ -289,6 +289,7 @@ main:after {
 
 .row {
   display: flex;
+  align-items: center;
   flex-direction: column;
   width: 100%;
   margin: 0;
@@ -327,6 +328,7 @@ main > .row:first-of-type {
 @media (min-width: 48rem) {
   .row {
     flex-direction: row;
+    align-items: inherit;
     flex-wrap: wrap; }
   .row.wide {
     flex-direction: column; }
