--- a/style/layout/layout.html
+++ b/style/layout/layout.html
@@ -70,7 +70,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="logo">
-        <a href="../../../index.html">
+        <a href="../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
         </a>
       </div>
@@ -80,7 +80,7 @@
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
         <ul id="header-navigation">
-          <li>About</li>
+          <li><a href="../../about/about.html">About</a></li>
           <li><a href="../../atoms/atoms.html">Atoms</a></li>
           <li><a href="../../molecules/molecules.html">Molecules</a></li>
           <li><a href="../../organisms/organisms.html">Organisms</a></li>
@@ -92,7 +92,7 @@
     <main>
       <section class="row wide">
         <h1 class="title">Layout</h1>
-        <p>The goal of content is to be discoverable and easy to absorb, and a site's or application's layout should not complicate that process.</p>
+        <p>The goal of content is to be discoverable and easy to absorb, and a site&rsquo;s or application&rsquo;s layout should not complicate that process.</p>
         <p>The Delta Design System is built on a <a href="https://alistapart.com/article/responsive-web-design/" target="_blank">responsive design</a> framework using <a href="https://developer.mozilla.org/en-US/docs/Glossary/Flexbox" target="_blank">flexbox</a>.</p>
         <p>The parent container in the framework is a <code>.row</code>. Each <code>.row</code> can be assigned an additional class that define how its child columns occupy the horizontal space of the row. On screens smaller than 48rem wide, all columns in the <code>.row</code> span the full width of the browser and stack vertically.</p>
       </section>
@@ -197,7 +197,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -210,7 +210,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
