--- a/3/css/master.scss
+++ b/3/css/master.scss
@@ -1,6 +1,13 @@
 @import "_global/base";
+@import "_global/colors";
 @import "_global/typography";
 @import "_global/layout";
+
+@import "_atoms/badges";
+@import "_atoms/buttons";
+@import "_atoms/figures";
+
+@import "_molecules/cards";
 
 @import "_organisms/header";
 @import "_organisms/footer";
