--- a/3/css/_global/_typography.scss
+++ b/3/css/_global/_typography.scss
@@ -50,6 +50,7 @@ p {
 p > cite {
   display: block;
   font-size: $small;
+  font-style: normal;
 }
 
 p > cite a {
@@ -161,7 +162,7 @@ ul, ol, dl {
     width: 100%;
     margin: 0;
     padding: $spacing-sm 0;
-    line-height: 1.325;
+    line-height: 1.5;
   }
 }
 
@@ -243,7 +244,6 @@ p:last-child {padding-bottom: 0;}
 a {
   //display: inline-block;
   line-height: inherit;
-  //text-decoration: none;
   color: $primary;
   @include transition(all, 0.25s, ease);
   &:hover, &:focus {
@@ -254,3 +254,70 @@ a {
 h1 a, h2 a, h3 a, h4 a {text-decoration: none;}
 
 p a, small a, li a {@include font-body-bold;}
+
+
+// INLINE ANCHOR LINKS & ICONS
+span.anchor {
+  display: inline-block;
+  padding: 0;
+  a {
+    color: transparent;
+  }
+  span.icon {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+  }
+}
+
+h2 > span.anchor {
+  width: calc(1.5 * #{$spacing-lg});
+  height: calc(1.5 * #{$spacing-lg});
+  margin: 0 auto 0 $spacing-sm;
+}
+
+h3 > span.anchor {
+  width: $spacing-lg;
+  height: $spacing-lg;
+  margin: 0 auto 0 $spacing-xs;
+}
+
+p > span.anchor,
+ul li > span.anchor,
+ol li > span.anchor,
+dl dt > span.anchor {
+  width: $spacing-lg;
+  height: $spacing-lg;
+  margin: 0 auto 0 $spacing-xs;
+}
+
+h2:hover > span.anchor a, h2:focus > span.anchor a,
+h3:hover > span.anchor a, h3:focus > span.anchor a,
+p:hover > span.anchor a, p:focus > span.anchor a,
+ul li:hover > span.anchor a, ul li:focus > span.anchor a,
+ol li:hover > span.anchor a, ol li:focus > span.anchor a,
+dl dt:hover > span.anchor a, dl dt:focus > span.anchor a {
+  color: $primary;
+  &:hover, &:focus {
+    color: $secondary;
+  }
+}
+
+
+// CODE
+pre {
+  margin: 0.4rem 0 0;
+  line-height: 1.2;
+}
+
+p > code, li > code, dd > code {
+  margin: 0;
+  padding: calc(#{$spacing-xs / 2}) $spacing-xs;
+  border-radius: $border-radius-xs;
+  font-family: "Liberation Mono",courier,monospace;
+  white-space: nowrap;
+  background-color: $lt-gray;
+}
+
+li > code {padding: calc(#{$spacing-xs} / 5) $spacing-xs;}
