--- a/3/css/_organisms/_footer.scss
+++ b/3/css/_organisms/_footer.scss
@@ -7,7 +7,7 @@ footer {
   justify-content: flex-start;
   width: 100%;
   margin: 0;
-  padding: $spacing-lg;
+  padding: $spacing-xl $spacing-xl $spacing-lg;
   nav {
     width: 100%;
     padding: 0;
