--- a/3/css/_global/_layout.scss
+++ b/3/css/_global/_layout.scss
@@ -14,7 +14,7 @@ main:after {
 // ROWS
 .row {
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	flex-direction: row;
 	flex-wrap: wrap;
 	width: 100%;
@@ -23,10 +23,16 @@ main:after {
   &:first-of-type {
     padding: 0 $spacing-lg;
   }
+  &.center-v {
+    align-items: center;
+  }
+  &.center-h {
+    justify-content: center;
+  }
   .row {
     width: calc(100% + #{$spacing-xl});
     margin: 0 calc(#{$spacing-lg} * -1);
-    padding: 0;
+    padding: $spacing-md 0 0;
   }
   .column {
     display: flex;
