--- a/3/css/_organisms/_header.scss
+++ b/3/css/_organisms/_header.scss
@@ -15,18 +15,6 @@ header {
   nav {
     width: 100%;
     padding: $spacing-lg;
-    .logo {
-      display: flex;
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      width: 0;
-      height: 0;
-      max-height: 0;
-      margin: 0;
-      @include transform(translateX(-100vw));
-      @include transition(all, 0.325s, ease);
-    }
     button.menu-toggle {
       display: flex;
       margin: 0 0 0 auto;
@@ -59,13 +47,16 @@ header {
       font-size: $p;
       list-style-type: none;
       color: $secondary;
-      @include transform(translateX(-100vw));
+      @include transform(translateX(100vw));
       @include transition(all, 0.325s, ease);
       &:last-child {padding: 0;}
       li {
         padding: $spacing-lg $spacing-xl $spacing-lg 0;
         text-align: right;
         a {text-decoration: none;}
+      }
+      li.logo {
+        display: none;
       }
     }
   }
@@ -82,11 +73,13 @@ header {
 @media (min-width: 48rem) {
   header {
     nav {
+      padding: $spacing-xl $spacing-xl $spacing-lg $spacing-xl;
       button.menu-toggle {
         display: none;
       }
       ul {
         flex-direction: row;
+        align-items: center;
         height: auto;
         font-size: $small;
         @include transform(translateX(0));
@@ -96,6 +89,13 @@ header {
           padding: 0;
           line-height: 2;
           text-align: left;
+        }
+        li.logo {
+          display: grid;
+          width: 4rem;
+          height: auto;
+          margin-right: $spacing-lg;
+          a {display: grid;}
         }
       }
     }
@@ -108,12 +108,6 @@ header.open {
   z-index: 1000;
   nav {
     height: 100vh;
-    .logo {
-      width: 4rem;
-      height: auto;
-      max-height: 6rem;
-      @include transform(translateX(0));
-    }
     button.menu-toggle {
       svg.menu-toggle-open {
         width: 0;
