--- a/3/css/_organisms/_footer.scss
+++ b/3/css/_organisms/_footer.scss
@@ -23,6 +23,7 @@ footer {
       &:last-child {padding: 0;}
       li {
         padding: 0 0 $spacing-md 0;
+        @include font-body-bold;
         a {text-decoration: none;}
       }
     }
@@ -77,10 +78,12 @@ footer {
       width: 40%;
       margin: 0;
       h2, small {
+        margin: 0 0 0 auto;
         text-align: right;
       }
       ul.social {
         justify-content: flex-end;
+        margin: 0 0 0 auto;
       }
       .logo {
         margin: 0 0 0 auto;
