--- a/3/css/_atoms/_buttons.scss
+++ b/3/css/_atoms/_buttons.scss
@@ -6,7 +6,7 @@ button, .button {
   max-width: 100%;
   max-height: 2.5rem;
   overflow: hidden;
-  margin: $spacing-lg 0 0;
+  margin: $spacing-lg auto 0 0;
   padding: $spacing-md calc(1.25 * #{$spacing-lg});
   padding: 0 calc(1.25 * #{$spacing-lg});
   border: 1px solid $primary;
