Inputs updates and more

--- a/3/css/_global/_mixins.scss
+++ b/3/css/_global/_mixins.scss
@@ -24,9 +24,9 @@
 };
 
 @mixin appearance($appearance: none) {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;  
+  -webkit-appearance: $appearance;
+  -moz-appearance: $appearance;
+  appearance: $appearance;  
 };
 
 @mixin animation-delay($delay: 1s) {
