--- a/3/css/_organisms/_header.scss
+++ b/3/css/_organisms/_header.scss
@@ -79,6 +79,7 @@ header {
 
 @media (min-width: 48rem) {
   header {
+    padding: 0 $spacing-lg;
     nav {
       button.menu-toggle {
         display: none;
