--- a/3/css/master.scss
+++ b/3/css/master.scss
@@ -8,6 +8,9 @@
 @import "_atoms/figures";
 
 @import "_molecules/cards";
+@import "_molecules/inputs";
 
 @import "_organisms/header";
 @import "_organisms/footer";
+
+// @import "_global/library";
