--- a/3/css/_global/_layout.scss
+++ b/3/css/_global/_layout.scss
@@ -19,9 +19,9 @@ main:after {
 	flex-wrap: wrap;
 	width: 100%;
 	margin: 0;
-  padding: $spacing-xl $spacing-lg 0;
+  padding: $spacing-lg $spacing-sm 0;
   &:first-of-type {
-    padding: 0 $spacing-lg;
+    padding: 0 $spacing-sm;
   }
   &.center-v {
     align-items: center;
@@ -30,21 +30,21 @@ main:after {
     justify-content: center;
   }
   .row {
-    width: calc(100% + #{$spacing-xl});
-    margin: 0 calc(#{$spacing-lg} * -1);
-    padding: $spacing-md 0 0;
+    width: calc(100% + #{$spacing-lg});
+    margin: 0 calc(#{$spacing-sm} * -1);
+    padding: $spacing-lg 0 0;
   }
   .column {
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: $spacing-lg $spacing-lg 0;
+    padding: $spacing-lg $spacing-sm 0;
     &:first-child {
-      padding: 0 $spacing-lg;
+      padding: 0 $spacing-sm;
     }
     .row {
       .column:first-child {
-        padding: $spacing-lg $spacing-lg 0;
+        padding: $spacing-lg $spacing-sm 0;
       }
     }
   }
@@ -52,6 +52,21 @@ main:after {
 
 @media (min-width: 48rem) {
   .row {
+    padding: $spacing-xl $spacing-lg 0;
+    &:first-of-type {
+      padding: 0 $spacing-lg;
+    }
+    .column {
+      padding: $spacing-lg $spacing-lg 0;
+      &:first-child {
+        padding: 0 $spacing-lg;
+      }
+      .row {
+        .column:first-child {
+          padding: $spacing-lg $spacing-lg 0;
+        }
+      }
+    }
     .column.span-12 {width: 100%;}
     .column.span-11 {width: calc((100% / 12) * 11);}
     .column.span-10 {width: calc((100% / 12) * 10);}
@@ -65,10 +80,8 @@ main:after {
     .column.span-2 {width: calc((100% / 12) * 2);}
     .column.span-1 {width: calc((100% / 12) * 1);}
     .row {
-/*
-      width: calc(100% + #{$spacing-xl});
-      margin: 0 calc(#{$spacing-lg} * -1);
-*/
+      margin: 0 calc(#{$spacing-md} * -1);
+      padding: $spacing-md 0 0;
     }
   }
 }
