--- a/3/css/_organisms/_footer.scss
+++ b/3/css/_organisms/_footer.scss
@@ -2,7 +2,7 @@
 footer {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
+  align-items: flex-start;
   flex-wrap: wrap;
   justify-content: flex-start;
   width: 100%;
