--- a/3/style/layouts/layouts.html
+++ b/3/style/layouts/layouts.html
@@ -64,17 +64,18 @@
             <h2 class="title">Layouts</h2>
           </div>
         </section>
-      </article>
-      <section class="row">
-        <div class="column span-3">
-          <fieldset style="padding: 0;">
-            <label for="show-grid" class="switch reverse"><input id="show-grid" type="checkbox" name="show-grid">Show responsive grid</label>
-            <div class="input-message">
-              <span class="help show">Use this switch to show and hide the responsive grid</span>
+        <section class="row">
+          <div class="column">
+            <div class="row cards">
+              <div class="card">
+                <fieldset style="padding: 0;">
+                  <label for="show-grid" class="switch reverse" style="margin: 0;"><input id="show-grid" type="checkbox" name="show-grid">Show responsive grid</label>
+                </fieldset>
+              </div>
             </div>
-          </fieldset>
-        </div>
-      </section>
+          </div>
+        </section>
+      </article>
     </main>
     <footer>
       <nav aria-labelledby="footer-navigation">
