--- a/3/css/_atoms/_buttons.scss
+++ b/3/css/_atoms/_buttons.scss
@@ -106,6 +106,9 @@ button, .button {
     &.post {
       margin-right: calc(#{$spacing-sm} * -1);
     }
+    svg {
+      width: 100%;
+    }
   }
 }
 
