--- a/3/css/_global/_layout.scss
+++ b/3/css/_global/_layout.scss
@@ -17,6 +17,7 @@ main:after {
 	align-items: flex-start;
 	flex-direction: row;
 	flex-wrap: wrap;
+	position: relative;
 	width: 100%;
 	margin: 0;
   padding: $spacing-lg $spacing-sm 0;
@@ -37,6 +38,7 @@ main:after {
   .column {
     display: flex;
     flex-direction: column;
+    position: relative;
     width: 100%;
     padding: $spacing-lg $spacing-sm 0;
     &:first-child {
@@ -87,12 +89,28 @@ main:after {
 }
 
 
-// ROW BORDERS
-.row.border:after {
+// BORDERS
+.border:after {
   display: block;
   width: 100%;
   height: 1px;
   margin: $spacing-lg auto 0;
+  background-color: $lt-gray;
+  content: "";
+}
+
+.border.top:after {
+  display: none;
+}
+
+.border.top:before {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  margin: 0 auto $spacing-lg;
   background-color: $lt-gray;
   content: "";
 }
