--- a/3/css/_global/_library.scss
+++ b/3/css/_global/_library.scss
@@ -2,8 +2,7 @@
 .responsive-grid {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -17,11 +16,17 @@
   @include transition(opacity, 0.25s, ease);
   .responsive-column {
     display: grid;
-    width: calc((100% / 4) - #{$spacing-lg});
+    width: calc((100% / 4) - #{$spacing-md});
     height: 100%;
-    margin: 0;
+    margin: 0 $spacing-md;
     padding: 0;
     background-color: #ff10ff;
+    &:first-of-type {
+      margin-left: 0;
+    }
+    &:nth-of-type(4) {
+      margin-right: 0;
+    }
   }
   .responsive-column:nth-of-type(5),
   .responsive-column:nth-of-type(6),
@@ -43,6 +48,13 @@
     padding: 0 $spacing-xl;
     .responsive-column {
       width: calc((100% / 8) - #{$spacing-lg});
+      margin: 0 $spacing-lg;
+      &:nth-of-type(4) {
+        margin-right: $spacing-lg;
+      }
+      &:nth-of-type(8) {
+        margin-right: 0;
+      }
     }
     .responsive-column:nth-of-type(5),
     .responsive-column:nth-of-type(6),
@@ -57,6 +69,12 @@
   .responsive-grid {
     .responsive-column {
       width: calc((100% / 12) - #{$spacing-lg});
+      &:nth-of-type(8) {
+        margin-right: $spacing-lg;
+      }
+      &:nth-of-type(12) {
+        margin-right: 0;
+      }
     }
   .responsive-column:nth-of-type(9),
   .responsive-column:nth-of-type(10),
