--- a/3/css/_organisms/_header.scss
+++ b/3/css/_organisms/_header.scss
@@ -42,7 +42,7 @@ header {
       flex-direction: column;
       width: auto;
       height: 0;
-      margin: 0;
+      margin: 0 0 0 auto;
       padding: 0;
       font-size: $p;
       list-style-type: none;
@@ -88,6 +88,7 @@ header {
         flex-direction: row;
         align-items: center;
         height: auto;
+        margin: 0;
         font-size: $small;
         @include transform(translateX(0));
         li {
