--- a/3/css/_global/_typography.scss
+++ b/3/css/_global/_typography.scss
@@ -259,24 +259,6 @@ p a, small a, li a {
   position: relative;
   @include font-body-bold;
   text-decoration: underline;
-/*
-  &:after {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0%;
-    height: 2px;
-    background-color: $secondary;
-    content: "";
-    @include transition(width, 0.25s, ease);
-  }
-  &:hover, &:focus {
-    &:after {
-      width: 100%;
-    }
-  }
-*/
 }
 
 
@@ -310,6 +292,7 @@ h3 > span.anchor {
   margin: 0 auto 0 $spacing-xs;
 }
 
+h4 > span.anchor,
 p > span.anchor,
 ul li > span.anchor,
 ol li > span.anchor,
@@ -321,6 +304,7 @@ dl dt > span.anchor {
 
 h2:hover > span.anchor a, h2:focus > span.anchor a,
 h3:hover > span.anchor a, h3:focus > span.anchor a,
+h4:hover > span.anchor a, h4:focus > span.anchor a,
 p:hover > span.anchor a, p:focus > span.anchor a,
 ul li:hover > span.anchor a, ul li:focus > span.anchor a,
 ol li:hover > span.anchor a, ol li:focus > span.anchor a,
